AT-356: tests have been added
GitOrigin-RevId: 863ca5fcd89acff3b86ef925be8eb06a0052e965